# Linear_Systems_Take_Home_Final

./: .dockerignore  .gitignore  .gitlab-ci.yml  BUILD.bazel  Dockerfile  Final.tex  Makefile  README.md  WORKSPACE  build.sh  content.tex  docker-compose.yml  functions.tex
resources/: one.json  three.json  two.json
resources/templates/: one.tex.j2  one_a.tex.j2  one_b.tex.j2  one_d.tex.j2  one_feedback.tex.j2  tex_three.tex.j2  three.tex.j2  three_four.tex.j2  three_one.tex.j2  three_three.tex.j2  three_two.tex.j2  two.tex.j2  two_one.tex.j2  two_two.tex.j2
results/: one_a.tex  one_b.tex  one_c.tex  one_d.tex  three_three.tex  three_two.tex  two_two.tex
scripts/: LatexFormat.py  Main.py  Makefile  Model.py  NonLinearFragment.py  Utilities.py  questionOne.py  questionThree.py  questionTwo.py
scripts/resources/: one.json  three.json  two.json
scripts/results/: NonLinearFragment.py  one_a.tex  one_b.tex  one_c.tex  one_d.tex  three_four.tex  three_one.tex  three_three.tex  two_one.tex  two_two.tex
tests/: testMain.py  test_LatexFormat.py  test_Model.py  test_QuestionOne.py  test_Utilities.py
